--- a/build.gradle
+++ b/build.gradle
@@ -18,16 +18,13 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-//	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'com.h2database:h2'
-
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.1'
 	runtimeOnly 'org.postgresql:postgresql'
 }
 
-test {
+tasks.named('test') {
 	useJUnitPlatform()
 }
