--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,5 @@
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5433/testdb
+spring.datasource.url=jdbc:postgresql://postgres:5432/testdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
-#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.username=sa
